--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,8 +46,8 @@ jobs:
           # Strip "v" prefix from tag name
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
 
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
+          # If master without tag, give unique snapshot version
+          [ "$VERSION" == "master" ] && VERSION="SNAPSHOT-${GIT_HASH}"
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
